--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_BASE=http://localhost:4000/api
-REACT_APP_API_LAB=http://localhost:4000/a5
-REACT_APP_BASE_API_URL=http://localhost:4000
+REACT_APP_API_BASE=https://kanbas-node-server-app-a6-3dnq.onrender.com/api
+REACT_APP_API_LAB=https://kanbas-node-server-app-a6-3dnq.onrender.com/a5
+REACT_APP_BASE_API_URL=https://kanbas-node-server-app-a6-3dnq.onrender.com
